<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/textViewTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/timerTextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewMoves"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewMoves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/movesTextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewBestMoves"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimer" />

    <TextView
        android:id="@+id/textViewBestMoves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bestMovesTextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/randomizeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMoves" />

    <Button
        android:id="@+id/randomizeButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:onClick="randomizeButtonClick"
        android:text="@string/randomize"
        app:layout_constraintBottom_toTopOf="@id/textViewSolved"
        app:layout_constraintEnd_toStartOf="@+id/solutionButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBestMoves"
        app:layout_constraintWidth_percent=".30" />

    <TextView
        android:id="@+id/textViewSolved"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:text="@string/solved"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorSuccess"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomizeButton" />

    <Button
        android:id="@+id/solutionButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:onClick="solutionButtonClick"
        android:text="@string/solution"
        app:layout_constraintBottom_toBottomOf="@+id/randomizeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/randomizeButton"
        app:layout_constraintTop_toTopOf="@+id/randomizeButton"
        app:layout_constraintWidth_percent=".30" />

</android.support.constraint.ConstraintLayout>