<?xml version="1.0" encoding="utf-8"?>
<!-- https://stackoverflow.com/questions/5944987/how-to-create-a-popup-window-popupwindow-in-android -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape">

    <TextView
        android:id="@+id/textViewPopUpTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/confirmPopupQuestion"
        android:textAlignment="center"
        android:textColor="@color/popUpForeground"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/confirmButtonYes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/confirmButtonYes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/popUpButtonBackground"
        android:text="@string/confirmPopupYes"
        android:textColor="@color/popUpForeground"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintWidth_percent=".35"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/confirmButtonNo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPopUpTextField" />

    <Button
        android:id="@+id/confirmButtonNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/popUpButtonBackground"
        android:text="@string/confirmPopupNo"
        android:textColor="@color/popUpForeground"
        app:layout_constraintBottom_toBottomOf="@id/confirmButtonYes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent=".35"
        app:layout_constraintStart_toEndOf="@+id/confirmButtonYes"
        app:layout_constraintTop_toTopOf="@id/confirmButtonYes" />


</android.support.constraint.ConstraintLayout>